Add screenshot and error in app js

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,10 @@
                 <hr/>
             </form>
         </div>
+        <div class="col-md-12">
+
+
+        </div>
     </div>
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
