--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="col-md-12">
             <div class="card" style="width: 39rem;left: 27%"  id="formAddCandidate">
-                <div class="card-header">New Candidate</div>
+                <label class="card-header">Add New Candidate</label>
                 <div class="card-body">
                     <form onSubmit="App.addCandidate(); return false;">
                         <div class="form-group">
